cfn_benchmark/cfn_templates/deep-security__cloudformation/templates/common/sps.template
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  #VERSION: Smart protection server template (qs-1ngr590jj).
Parameters:
  AWSIKeyPairName:
    Description: Existing key pair to use for connecting to your Smart Protection Server
    Type: 'AWS::EC2::KeyPair::KeyName'
    AllowedPattern: '[-_a-zA-Z0-9]*'
    ConstraintDescription: Select an existing EC2 Key Pair.
  AWSIVPC:
    Description: Existing VPC to deploy Smart Protection Server
    Type: 'AWS::EC2::VPC::Id'
    AllowedPattern: '[-_a-zA-Z0-9]*'
  AWSSubnetID:
    Description: >-
      Existing Subnet for Smart Protection Server. Must be a subnet contained
      the in VPC chosen above.
    Type: 'AWS::EC2::Subnet::Id'
    AllowedPattern: '[-_a-zA-Z0-9]*'
    ConstraintDescription: Subnet ID must exist in the chosen VPC
  SPSInstanceType:
    Description: Amazon EC2 instance type for the Smart Protection Server
    Type: String
    Default: t2.medium
    AllowedValues:
      - t2.medium
      - t3.medium
      - t3a.medium
      - m3.medium
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - m5a.large
      - m5a.xlarge
      - m5a.2xlarge
      - m5.large
      - m5.xlarge
      - m5.2xlarge
      - c5.large
      - c5.xlarge
      - c4.large
      - c4.xlarge
      - c3.large
      - c3.xlarge
      - r5.large
      - r5.xlarge
      - r3.large
      - r3.xlarge
  SPSWebAdminPassword:
    NoEcho: true
    Description: The Smart Protection Server admin account password
    Type: String
    MinLength: 8
    MaxLength: 41
    AllowedPattern: '[a-zA-Z0-9]*'
    ConstraintDescription: must contain only alphanumeric characters.
Mappings:
  RegionToAMI:
    eu-north-1:
      '64': ami-07d4cadf1f6e6dcf5
    ap-south-1:
      '64': ami-0d588c1ecc867f9b0
    eu-west-3:
      '64': ami-0548a512bfabb7020
    eu-west-2:
      '64': ami-0099b15e02cbc488e
    eu-west-1:
      '64': ami-083040dfef09b28b0
    ap-northeast-2:
      '64': ami-0d0dcb075672adfe4
    ap-northeast-1:
      '64': ami-008baa28c0a0105eb
    me-south-1:
      '64': ami-03c7d37cbb18698fa
    sa-east-1:
      '64': ami-0718d6348ef627b93
    ca-central-1:
      '64': ami-01f4f0f5375f1eec4
    ap-southeast-1:
      '64': ami-04509179ca2cdfbd3
    ap-southeast-2:
      '64': ami-00f8ce0c9003507e7
    eu-central-1:
      '64': ami-04c81252a6434067e
    us-east-1:
      '64': ami-05a80a92619022a9c
    us-east-2:
      '64': ami-0fc6441a897b9a7e5
    us-west-1:
      '64': ami-02cce509753786773
    us-west-2:
      '64': ami-047672c1ed5463130
Resources:
  SPS:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: !FindInMap
        - RegionToAMI
        - !Ref 'AWS::Region'
        - '64'
      InstanceType: !Ref SPSInstanceType
      NetworkInterfaces:
        - DeviceIndex: '0'
          SubnetId: !Ref AWSSubnetID
          AssociatePublicIpAddress: true
          GroupSet:
            - !Ref TmSpsSecurityGroup
      Tags:
        - Key: Name
          Value: TM Smart Protection Server
      KeyName: !Ref AWSIKeyPairName
      UserData: !Base64
        'Fn::Join':
          - ''
          - - |
              #!/bin/bash
            - 'chpasswd <<<"admin:'
            - !Ref SPSWebAdminPassword
            - '"'
  TmSpsSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allow FRS and WRS default ports
      VpcId: !Ref AWSIVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 10.0.0.0/8
        - IpProtocol: tcp
          FromPort: 4343
          ToPort: 4343
          CidrIp: 10.0.0.0/8
        - IpProtocol: tcp
          FromPort: 5274
          ToPort: 5275
          CidrIp: 10.0.0.0/8
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 172.16.0.0/12
        - IpProtocol: tcp
          FromPort: 4343
          ToPort: 4343
          CidrIp: 172.16.0.0/12
        - IpProtocol: tcp
          FromPort: 5274
          ToPort: 5275
          CidrIp: 172.16.0.0/12
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 192.168.0.0/16
        - IpProtocol: tcp
          FromPort: 4343
          ToPort: 4343
          CidrIp: 192.168.0.0/16
        - IpProtocol: tcp
          FromPort: 5274
          ToPort: 5275
          CidrIp: 192.168.0.0/16
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: TmSpsSecurityGroup
Outputs:
  WRSurl:
    Value: !Join
      - ''
      - - 'http://'
        - !GetAtt
          - SPS
          - PrivateIp
        - ':5274'
  WRSHTTPSurl:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - SPS
          - PrivateIp
        - ':5275'
  FRSurl:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - SPS
          - PrivateIp
        - ':443/tmcss'
